k8s-backup/ingresses-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-28T14:25:02Z"
    generation: 1
    name: agent-043c38c9-boussad-agent-gateway-ingress
    namespace: demo1
    resourceVersion: "31658185"
    uid: 35836b61-b18c-480f-8f7d-ee62642910e9
  spec:
    ingressClassName: public
    rules:
    - host: boussad-agent-api.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-043c38c9-boussad-agent-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - boussad-agent-api.ailab.infocepo.com
      secretName: agent-043c38c9-boussad-agent-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-28T14:25:02Z"
    generation: 1
    name: agent-043c38c9-boussad-agent-ingress
    namespace: demo1
    resourceVersion: "31658195"
    uid: e751bbad-7450-4d72-ba51-9459416e8455
  spec:
    ingressClassName: public
    rules:
    - host: boussad-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-043c38c9-boussad-agent-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - boussad-agent.ailab.infocepo.com
      secretName: agent-043c38c9-boussad-agent-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-27T19:12:04Z"
    generation: 1
    name: agent-0944b375-test-fix-deploy-gateway-ingress
    namespace: demo1
    resourceVersion: "31506620"
    uid: 3d649c80-1031-4f7f-ba21-ac9208f3de5e
  spec:
    ingressClassName: public
    rules:
    - host: test-fix-deploy-api.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-0944b375-test-fix-deploy-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - test-fix-deploy-api.ailab.infocepo.com
      secretName: agent-0944b375-test-fix-deploy-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-27T19:12:04Z"
    generation: 1
    name: agent-0944b375-test-fix-deploy-ingress
    namespace: demo1
    resourceVersion: "31506626"
    uid: 6a548755-065f-4fd0-aa40-4c01902df5d4
  spec:
    ingressClassName: public
    rules:
    - host: test-fix-deploy.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-0944b375-test-fix-deploy-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - test-fix-deploy.ailab.infocepo.com
      secretName: agent-0944b375-test-fix-deploy-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-31T13:38:03Z"
    generation: 1
    name: agent-894aef29-apacheco-agent-ingress
    namespace: demo1
    resourceVersion: "26529176"
    uid: 4696682e-3739-4793-aabc-ec4f1aad58dc
  spec:
    ingressClassName: public
    rules:
    - host: apacheco-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-894aef29-apacheco-agent-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - apacheco-agent.ailab.infocepo.com
      secretName: agent-894aef29-apacheco-agent-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-30T23:53:09Z"
    generation: 1
    name: agent-9ae62006-vjourne-agent-ingress
    namespace: demo1
    resourceVersion: "26419156"
    uid: 984a1159-69e4-4d5f-a185-f1a74c596207
  spec:
    ingressClassName: public
    rules:
    - host: vjourne-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-9ae62006-vjourne-agent-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - vjourne-agent.ailab.infocepo.com
      secretName: agent-9ae62006-vjourne-agent-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-04T05:25:00Z"
    generation: 1
    name: agent-a22e48d7-mi-agent-gateway-ingress
    namespace: demo1
    resourceVersion: "32866709"
    uid: c7a9fc72-251f-430a-9a27-0f44467c7358
  spec:
    ingressClassName: public
    rules:
    - host: mi-agent-api.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-a22e48d7-mi-agent-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - mi-agent-api.ailab.infocepo.com
      secretName: agent-a22e48d7-mi-agent-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-04T05:25:00Z"
    generation: 1
    name: agent-a22e48d7-mi-agent-ingress
    namespace: demo1
    resourceVersion: "32866716"
    uid: 90617be3-e3c9-4b6d-a6d2-3cc366046734
  spec:
    ingressClassName: public
    rules:
    - host: mi-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-a22e48d7-mi-agent-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - mi-agent.ailab.infocepo.com
      secretName: agent-a22e48d7-mi-agent-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-27T19:26:25Z"
    generation: 1
    name: agent-b0faa0cb-test-no-auth-gateway-ingress
    namespace: demo1
    resourceVersion: "31509017"
    uid: 2d7b9aa9-5ab7-43e1-ac03-4342401ede9e
  spec:
    ingressClassName: public
    rules:
    - host: test-no-auth-api.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-b0faa0cb-test-no-auth-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - test-no-auth-api.ailab.infocepo.com
      secretName: agent-b0faa0cb-test-no-auth-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-27T19:26:25Z"
    generation: 1
    name: agent-b0faa0cb-test-no-auth-ingress
    namespace: demo1
    resourceVersion: "31509027"
    uid: 153431db-93d9-4b73-b39a-43a8528d817e
  spec:
    ingressClassName: public
    rules:
    - host: test-no-auth.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-b0faa0cb-test-no-auth-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - test-no-auth.ailab.infocepo.com
      secretName: agent-b0faa0cb-test-no-auth-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-19T13:20:27Z"
    generation: 1
    name: agent-d6466a64-community-research-gateway-ingress
    namespace: demo1
    resourceVersion: "29975630"
    uid: f53b494c-d47d-4bbb-a225-c2907d8772a3
  spec:
    ingressClassName: public
    rules:
    - host: community-research-api.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-d6466a64-community-research-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - community-research-api.ailab.infocepo.com
      secretName: agent-d6466a64-community-research-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-19T13:20:27Z"
    generation: 1
    name: agent-d6466a64-community-research-ingress
    namespace: demo1
    resourceVersion: "29975627"
    uid: 56f494d9-eb5b-4556-bfe8-d7159b5c55d0
  spec:
    ingressClassName: public
    rules:
    - host: community-research.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-d6466a64-community-research-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - community-research.ailab.infocepo.com
      secretName: agent-d6466a64-community-research-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"chunked_transfer_encoding off;\n","nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-connect-timeout":"30","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600","nginx.ingress.kubernetes.io/ssl-redirect":"true"}, [...]
      nginx.ingress.kubernetes.io/configuration-snippet: |
        chunked_transfer_encoding off;
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-06T17:58:53Z"
    generation: 1
    name: agent-db32cfa8-new-agent-gateway-ingress
    namespace: demo1
    resourceVersion: "27644231"
    uid: dc71042d-eb34-48eb-b6e7-038662dd257b
  spec:
    ingressClassName: public
    rules:
    - host: api.new-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-db32cfa8-new-agent-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - api.new-agent.ailab.infocepo.com
      secretName: agent-db32cfa8-new-agent-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"agent-db32cfa8-new-agent-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"new-agent.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"agent-db32cfa8-new-agent-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["new-ag [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-06T18:00:41Z"
    generation: 7
    name: agent-db32cfa8-new-agent-ingress
    namespace: demo1
    resourceVersion: "27644988"
    uid: 0e53df45-fd40-48c6-8b2f-2328be3b32d4
  spec:
    ingressClassName: public
    rules:
    - host: new-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-db32cfa8-new-agent-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - new-agent.ailab.infocepo.com
      secretName: agent-db32cfa8-new-agent-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-07T08:18:25Z"
    generation: 1
    name: agent-f02a2703-abigot-agent-gateway-ingress
    namespace: demo1
    resourceVersion: "33429747"
    uid: ac69a47a-50f4-4192-9b9c-4b8d30615570
  spec:
    ingressClassName: public
    rules:
    - host: abigot-agent-api.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-f02a2703-abigot-agent-svc
              port:
                number: 8642
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - abigot-agent-api.ailab.infocepo.com
      secretName: agent-f02a2703-abigot-agent-gateway-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-07T08:18:25Z"
    generation: 1
    name: agent-f02a2703-abigot-agent-ingress
    namespace: demo1
    resourceVersion: "33429757"
    uid: 2fb918d4-0672-491b-9561-74428e5b1671
  spec:
    ingressClassName: public
    rules:
    - host: abigot-agent.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agent-f02a2703-abigot-agent-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - abigot-agent.ailab.infocepo.com
      secretName: agent-f02a2703-abigot-agent-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-24T13:38:57Z"
    generation: 3
    name: agent-ynotopec-ingress
    namespace: demo1
    resourceVersion: "25149248"
    uid: 8b5978b4-3c0c-47c6-8b50-bab8ecbc53e4
  spec:
    ingressClassName: public
    rules:
    - host: agent.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: ynotopec-svc
              port:
                number: 8787
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - agent.infocepo.com
      secretName: agent-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"agents-saas-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"agents-saas.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"agents-saas-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["agents-saas.ailab.infocepo.com [...]
      nginx.ingress.kubernetes.io/no-cache: "true"
      nginx.ingress.kubernetes.io/proxy-cache: ""
      nginx.ingress.kubernetes.io/proxy-cache-bypass: no-cache
      nginx.ingress.kubernetes.io/proxy-no-cache: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-20T14:35:34Z"
    generation: 1
    name: agents-saas-ingress
    namespace: demo1
    resourceVersion: "26214940"
    uid: 5e88407d-6a52-4009-8e94-f5e5d20ccde7
  spec:
    ingressClassName: public
    rules:
    - host: agents-saas.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: agents-saas-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - agents-saas.ailab.infocepo.com
      secretName: agents-saas-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"ai-arch-infocepo-com-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"ai.arch.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"ai-arch-infocepo-com-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]," [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-05T00:09:55Z"
    generation: 1
    name: ai-arch-infocepo-com-ingress
    namespace: demo1
    resourceVersion: "33010537"
    uid: ca0df663-f3ce-415a-9845-82a463a129c4
  spec:
    ingressClassName: public
    rules:
    - host: ai.arch.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: ai-arch-infocepo-com-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - ai.arch.infocepo.com
      secretName: ai-arch-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"ai-infra-shop-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"shop.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"ai-infra-shop-svc","port":{"number":80}}},"pat [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-08T14:05:17Z"
    generation: 1
    name: ai-infra-shop-ingress
    namespace: demo1
    resourceVersion: "27987834"
    uid: 4e5aa4e7-ea0e-477a-ac68-8781d4b91151
  spec:
    ingressClassName: public
    rules:
    - host: shop.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: ai-infra-shop-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - shop.infocepo.com
      secretName: ai-infra-shop-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"ai-news-ru-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"ai-news-ru.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"ai-news-ru-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"host [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-07-08T21:24:46Z"
    generation: 3
    name: ai-news-ru-ingress
    namespace: demo1
    resourceVersion: "22563154"
    uid: 3685f41e-987d-44e5-93b5-489f2d14f87a
  spec:
    ingressClassName: public
    rules:
    - host: ai-news-ru.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: ai-news-ru-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - ai-news-ru.ailab.infocepo.com
      secretName: ai-news-ru-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/configuration-snippet":"add_header Cache-Control \"no-cache, no-store, must-revalidate\";\nadd_header Pragma \"no-cache\";\nadd_header Expires \"0\";\n","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"creationTimestamp":"2026-07-06T09:06:05Z","generation":1,"name":"ai-standards-ingress","namespace":"demo1","resourceVersion":"317979984", [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/configuration-snippet: |
        add_header Cache-Control "no-cache, no-store, must-revalidate";
        add_header Pragma "no-cache";
        add_header Expires "0";
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2026-07-11T19:51:15Z"
    generation: 2
    name: ai-standards-ingress
    namespace: demo1
    resourceVersion: "22826538"
    uid: f5620d47-0439-4e7f-8cc2-4343aae73272
  spec:
    ingressClassName: public
    rules:
    - host: productivity.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: ai-standards-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - productivity.ailab.infocepo.com
      secretName: ai-standards-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"automation-tertiaire-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"automation.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"automation-tertiaire-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["automation.ailab.infocep [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-08-01T01:22:27Z"
    generation: 1
    name: automation-tertiaire-ingress
    namespace: demo1
    resourceVersion: "26690844"
    uid: b4483200-71f8-40c0-9ee4-7622c3d1b2b5
  spec:
    ingressClassName: public
    rules:
    - host: automation.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: automation-tertiaire-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - automation.ailab.infocepo.com
      secretName: automation-tertiaire-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"benchmark-endpoints-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"benchmark.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"benchmark-endpoints-sv [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2026-07-16T19:08:55Z"
    generation: 1
    name: benchmark-endpoints-ingress
    namespace: demo1
    resourceVersion: "23720163"
    uid: 91eb34ed-07ad-4787-9a93-f485e61bf885
  spec:
    ingressClassName: public
    rules:
    - host: benchmark.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: benchmark-endpoints-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - benchmark.demo1.ailab.infocepo.com
      secretName: benchmark-endpoints-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"bge-m3-article-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"bge-m3-article.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"bge-m3-article-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}], [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-08T21:24:47Z"
    generation: 3
    name: bge-m3-article-ingress
    namespace: demo1
    resourceVersion: "22563204"
    uid: 7cc034bd-5c67-4953-a10a-006daf68adfa
  spec:
    ingressClassName: public
    rules:
    - host: bge-m3-article.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: bge-m3-article-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - bge-m3-article.ailab.infocepo.com
      secretName: bge-m3-article-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/proxy-body-size":"2m","nginx.ingress.kubernetes.io/proxy-cache":"{\"enabled\": false}"},"labels":{"app":"eval-dashboard"},"name":"eval-dashboard","namespace":"demo1"},"spec":{"rules":[{"host":"eval.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"eval-dashboard","port":{" [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/proxy-body-size: 2m
      nginx.ingress.kubernetes.io/proxy-cache: '{"enabled": false}'
    creationTimestamp: "2026-08-04T09:00:22Z"
    generation: 2
    labels:
      app: eval-dashboard
    name: eval-dashboard
    namespace: demo1
    resourceVersion: "27217232"
    uid: 60212cdb-d1be-4f03-b0c9-b2fa91ffc004
  spec:
    ingressClassName: public
    rules:
    - host: eval.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: eval-dashboard
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - eval.ailab.infocepo.com
      secretName: eval-dashboard-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"exploratrice-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"exploratrice.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"exploratrice-svc","port":{"number":3000}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["exploratrice.demo1. [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-07T09:17:53Z"
    generation: 1
    name: exploratrice-ingress
    namespace: demo1
    resourceVersion: "33438388"
    uid: 89e1bffe-6b06-4159-9d9e-8efbe48538dc
  spec:
    ingressClassName: public
    rules:
    - host: exploratrice.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: exploratrice-svc
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - exploratrice.demo1.ailab.infocepo.com
      secretName: exploratrice-demo1-ailab-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"infocepo-avance-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"avance.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"infocepo-avance-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["avance.demo1.infocepo.com"],"secretNam [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-07-08T21:24:49Z"
    generation: 4
    name: infocepo-avance-ingress
    namespace: demo1
    resourceVersion: "29157972"
    uid: 3ce5b9d6-3d8a-496a-803a-c06e6b429f6f
  spec:
    ingressClassName: public
    rules:
    - host: avance.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: infocepo-avance-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - avance.demo1.ailab.infocepo.com
      secretName: avance-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"infra-dashboard-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"infra.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"infra-dashboard-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"links.ailab.infocepo.com","http":{"paths":[ [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-07-20T01:57:27Z"
    generation: 2
    name: infra-dashboard-ingress
    namespace: demo1
    resourceVersion: "26705745"
    uid: f07a8958-827a-4db4-887d-03f21ce05ec6
  spec:
    ingressClassName: public
    rules:
    - host: links.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: infra-dashboard-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - links.ailab.infocepo.com
      secretName: infra-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/configuration-snippet":"add_header Cache-Control \"no-cache, no-store, must-revalidate\";\nadd_header Pragma \"no-cache\";\nadd_header X-Frame-Options \"SAMEORIGIN\";\nadd_header X-Content-Type-Options \"nosniff\";\n"},"name":"infra-dashboard-v2-ingress","namespace":"demo1"},"spec":{"ingres [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/configuration-snippet: |
        add_header Cache-Control "no-cache, no-store, must-revalidate";
        add_header Pragma "no-cache";
        add_header X-Frame-Options "SAMEORIGIN";
        add_header X-Content-Type-Options "nosniff";
    creationTimestamp: "2026-08-13T14:06:22Z"
    generation: 1
    name: infra-dashboard-v2-ingress
    namespace: demo1
    resourceVersion: "28899816"
    uid: b943a6f1-0567-427b-8560-cf01a7bb0810
  spec:
    ingressClassName: public
    rules:
    - host: infra2.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: infra-dashboard-v2-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - infra2.ailab.infocepo.com
      secretName: infra-v2-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/configuration-snippet":"proxy_set_header X-Forwarded-Proto $scheme;\nproxy_set_header X-Forwarded-Host $host;\nproxy_set_header X-Forwarded-Port $server_port;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n","nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress. [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-Port $server_port;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    creationTimestamp: "2026-07-24T14:39:22Z"
    generation: 1
    name: keycloak-ingress
    namespace: demo1
    resourceVersion: "25168343"
    uid: f6440831-7715-473d-a6ee-d2543902f1a0
  spec:
    ingressClassName: public
    rules:
    - host: keycloak.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: keycloak-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - keycloak.demo1.ailab.infocepo.com
      secretName: keycloak-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/proxy-body-size":"10m"},"name":"linkflow","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"linkflow.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"linkflow","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["linkflow.demo1.infocepo.com"],"secretName":"linkf [...]
      nginx.ingress.kubernetes.io/proxy-body-size: 10m
    creationTimestamp: "2026-07-08T21:24:49Z"
    generation: 3
    name: linkflow
    namespace: demo1
    resourceVersion: "22563366"
    uid: e26b4f0f-c8f2-46a9-a13a-a10bf158ffcf
  spec:
    ingressClassName: public
    rules:
    - host: linkflow.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: linkflow
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - linkflow.ailab.infocepo.com
      secretName: linkflow-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"links-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"resources.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"links-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["resou [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-21T12:06:16Z"
    generation: 1
    name: links-ingress
    namespace: demo1
    resourceVersion: "30331514"
    uid: 5d076586-980d-45af-8db5-5fbd0c58a121
  spec:
    ingressClassName: public
    rules:
    - host: resources.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: links-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - resources.ailab.infocepo.com
      secretName: resources-ailab-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/proxy-body-size":"100m","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"mcp-nginx-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"mcp-proxy.ailab.infocepo.com","http":{"pa [...]
      nginx.ingress.kubernetes.io/proxy-body-size: 100m
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-10T18:47:08Z"
    generation: 1
    name: mcp-nginx-ingress
    namespace: demo1
    resourceVersion: "28388392"
    uid: 039fc527-82d4-4491-9f75-ed9bed3686e2
  spec:
    ingressClassName: public
    rules:
    - host: mcp-proxy.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: mcp-nginx-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - mcp-proxy.ailab.infocepo.com
      secretName: mcp-proxy-ailab-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"minio-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"minio.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"minio-svc","port":{"number":9000}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-07-10T07:51:19Z"
    generation: 3
    name: minio-ingress
    namespace: demo1
    resourceVersion: "23112829"
    uid: c61562a0-5a38-4add-ba87-d1a6bb96d0e5
  spec:
    ingressClassName: public
    rules:
    - host: minio.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: minio-svc
              port:
                number: 9000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - minio.demo1.ailab.infocepo.com
      secretName: minio-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/add-base-url":"true","nginx.ingress.kubernetes.io/configuration-snippet":"add_header Cache-Control \"no-cache, no-store, must-revalidate\"; add_header Pragma \"no-cache\"; add_header Expires \"0\";","nginx.ingress.kubernetes.io/modified-timestamp":"1787061937","nginx.ingress.kubernetes.io/proxy-body-size":"10m"},"creationTimesta [...]
      nginx.ingress.kubernetes.io/add-base-url: "true"
      nginx.ingress.kubernetes.io/configuration-snippet: add_header Cache-Control
        "no-cache, no-store, must-revalidate"; add_header Pragma "no-cache"; add_header
        Expires "0";
      nginx.ingress.kubernetes.io/modified-timestamp: "1787061937"
      nginx.ingress.kubernetes.io/proxy-body-size: 10m
    creationTimestamp: "2026-07-08T21:24:49Z"
    generation: 8
    name: model-tracker-ingress
    namespace: demo1
    resourceVersion: "31411625"
    uid: b32c2490-a3fa-4e60-ae16-8c59ccc3d77c
  spec:
    ingressClassName: public
    rules:
    - host: models.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: model-tracker-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - models.ailab.infocepo.com
      secretName: models-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"moulineuse-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"moulineuse.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"moulineuse-svc","port":{"number":3000}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["moulineuse.demo1.ailab.in [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-07T09:16:29Z"
    generation: 1
    name: moulineuse-ingress
    namespace: demo1
    resourceVersion: "33438007"
    uid: f67477c1-2fad-472c-b995-e61ffdb4832f
  spec:
    ingressClassName: public
    rules:
    - host: moulineuse.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: moulineuse-svc
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - moulineuse.demo1.ailab.infocepo.com
      secretName: moulineuse-demo1-ailab-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"news-2026-09-04-ailab-infocepo-com-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"news-2026-09-04.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"news-2026-09-04-ailab-infocepo-com-svc","port":{"number":8 [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-04T11:35:06Z"
    generation: 1
    name: news-2026-09-04-ailab-infocepo-com-ingress
    namespace: demo1
    resourceVersion: "32913609"
    uid: e467bebe-fcc0-49c5-a5c1-c1a5ffaaac15
  spec:
    ingressClassName: public
    rules:
    - host: news-2026-09-04.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: news-2026-09-04-ailab-infocepo-com-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - news-2026-09-04.ailab.infocepo.com
      secretName: news-2026-09-04-ailab-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"labels":{"app":"news-aggregator"},"name":"news-aggregator","namespace":"demo1"},"spec":{"rules":[{"host":"news-aggregator.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"news-aggregator","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["news-aggregator.demo1.ailab.infocepo.com"],"secretName":"news-aggre [...]
    creationTimestamp: "2026-09-03T22:41:51Z"
    generation: 1
    labels:
      app: news-aggregator
    name: news-aggregator
    namespace: demo1
    resourceVersion: "32816857"
    uid: 3415cfa1-02e2-4b3a-aa66-f92a93e5abb2
  spec:
    ingressClassName: public
    rules:
    - host: news-aggregator.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: news-aggregator
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - news-aggregator.demo1.ailab.infocepo.com
      secretName: news-aggregator-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/cache":"false","nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-bypass-cache":"true","nginx.ingress.kubernetes.io/proxy-no-cache":"true","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600"},"name":"onyxia-ingress","namespace":"demo1 [...]
      nginx.ingress.kubernetes.io/cache: "false"
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-bypass-cache: "true"
      nginx.ingress.kubernetes.io/proxy-no-cache: "true"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    creationTimestamp: "2026-07-24T18:53:08Z"
    generation: 4
    name: onyxia-ingress
    namespace: demo1
    resourceVersion: "26749598"
    uid: 0ca915ab-228c-4878-97bf-ff8092c31d23
  spec:
    ingressClassName: public
    rules:
    - host: onyxia.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: onyxia-api
              port:
                number: 80
          path: /api/
          pathType: Prefix
        - backend:
            service:
              name: onyxia-web
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - onyxia.demo1.ailab.infocepo.com
      secretName: onyxia-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"openmed-api-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"openmed.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"openmed","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"openmed.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{ [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-07-09T00:13:17Z"
    generation: 2
    name: openmed-api-ingress
    namespace: demo1
    resourceVersion: "22563260"
    uid: 4d6d2caa-7d8f-4c39-b1b5-40a0fb84ff11
  spec:
    ingressClassName: public
    rules:
    - host: openmed.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: openmed
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - openmed.ailab.infocepo.com
      secretName: openmed-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"oracle-monitor-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"oracle-monitor.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"oracle-monitor","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls" [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-07-08T21:24:51Z"
    generation: 5
    name: oracle-monitor-ingress
    namespace: demo1
    resourceVersion: "22566676"
    uid: 6562426a-bc09-4ff6-8367-f7592d83564b
  spec:
    ingressClassName: public
    rules:
    - host: oracle-monitor.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: oracle-monitor
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - oracle-monitor.ailab.infocepo.com
      secretName: oracle-monitor-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"oss-models-ingress","namespace":"demo1"},"spec":{"ingressClassName":"nginx","rules":[{"host":"oss-efficiency.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"oss-models-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["oss-efficiency.ailab.infocepo. [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-03T20:38:18Z"
    generation: 1
    name: oss-models-ingress
    namespace: demo1
    resourceVersion: "32800741"
    uid: b5faac8d-a5c4-4d9f-a15c-71c9412b930a
  spec:
    ingressClassName: nginx
    rules:
    - host: oss-efficiency.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: oss-models-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - oss-efficiency.ailab.infocepo.com
      secretName: oss-models-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"labels":{"app":"owui-external-functions"},"name":"owui-external-functions-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"blog.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"owui-external-functions-svc","port":{ [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-16T19:26:32Z"
    generation: 3
    labels:
      app: owui-external-functions
    name: owui-external-functions-ingress
    namespace: demo1
    resourceVersion: "23727955"
    uid: d877fba0-ccd5-413b-abda-e4f1b8ec21d9
  spec:
    ingressClassName: public
    rules:
    - host: openwebui-docs.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: owui-external-functions-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - openwebui-docs.ailab.infocepo.com
      secretName: openwebui-docs-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"pdf-inspector-web-ing","namespace":"demo1"},"spec":{"ingressClassName":"nginx","rules":[{"host":"pdf-inspector.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"pdf-inspector-web-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["pdf-inspector.demo1.i [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-21T12:00:39Z"
    generation: 1
    name: pdf-inspector-web-ing
    namespace: demo1
    resourceVersion: "30330660"
    uid: aba06f78-4973-440d-b34f-dc25bc461d68
  spec:
    ingressClassName: nginx
    rules:
    - host: pdf-inspector.demo1.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: pdf-inspector-web-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - pdf-inspector.demo1.infocepo.com
      secretName: pdf-inspector-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"privacy-benchmark-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"privacy.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"privacy-benchmark-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["privacy.demo1.infocepo [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-08T21:24:51Z"
    generation: 3
    name: privacy-benchmark-ingress
    namespace: demo1
    resourceVersion: "22563392"
    uid: 987c775a-9e7e-4bdc-b3c2-872a856c340b
  spec:
    ingressClassName: public
    rules:
    - host: privacy.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: privacy-benchmark-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - privacy.ailab.infocepo.com
      secretName: privacy-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"creationTimestamp":"2026-07-08T21:24:51Z","generation":4,"name":"profit-employee-ingress","namespace":"demo1","resourceVersion":"28082557","uid":"65ccc192-1d9f-42b0-8e64-5d4fd8800d9c"},"spec":{"ingressClassName":"public","rules":[{"host":"profit-per-employee.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"profit-employee-service" [...]
    creationTimestamp: "2026-07-08T21:24:51Z"
    generation: 5
    name: profit-employee-ingress
    namespace: demo1
    resourceVersion: "28082872"
    uid: 65ccc192-1d9f-42b0-8e64-5d4fd8800d9c
  spec:
    ingressClassName: public
    rules:
    - host: profit-per-employee.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: profit-employee-service
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - profit-per-employee.demo1.ailab.infocepo.com
      secretName: profit-per-employee-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"rag-bench-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"rag-bench.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"rag-bench-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["rag-bench.demo1.ailab.infocepo.com"],"sec [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-08-10T09:47:58Z"
    generation: 1
    name: rag-bench-ingress
    namespace: demo1
    resourceVersion: "28320277"
    uid: f8c6d7ac-de54-4b46-a696-df96f8646ee3
  spec:
    ingressClassName: public
    rules:
    - host: rag-bench.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: rag-bench-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - rag-bench.demo1.ailab.infocepo.com
      secretName: rag-bench-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"rag-eval-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"rag-eval.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"rag-eval-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["rag-eval.demo1.ailab.infocepo.com"],"secretN [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-08-12T14:34:27Z"
    generation: 1
    name: rag-eval-ingress
    namespace: demo1
    resourceVersion: "28717651"
    uid: 0ee39b56-522a-4daa-bf69-32627241f04d
  spec:
    ingressClassName: public
    rules:
    - host: rag-eval.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: rag-eval-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - rag-eval.demo1.ailab.infocepo.com
      secretName: rag-eval-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"rag-openwebui-article-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"rag.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"rag-openwebui-article-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["rag.demo1.infocepo [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-07-08T21:24:51Z"
    generation: 3
    name: rag-openwebui-article-ingress
    namespace: demo1
    resourceVersion: "22563404"
    uid: 57a4683d-1388-4202-a814-6b2c94b89211
  spec:
    ingressClassName: public
    rules:
    - host: rag.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: rag-openwebui-article-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - rag.ailab.infocepo.com
      secretName: rag-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/proxy-body-size":"0"},"name":"registry-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"registry.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"registry","port":{"number":5000}}},"path":"/","pathType":"Prefix"}]}}] [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
    creationTimestamp: "2026-09-07T09:49:07Z"
    generation: 1
    name: registry-ingress
    namespace: demo1
    resourceVersion: "33444198"
    uid: bacb6db7-65e8-4ae8-b7b1-c053019b02de
  spec:
    ingressClassName: public
    rules:
    - host: registry.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: registry
              port:
                number: 5000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - registry.demo1.ailab.infocepo.com
      secretName: registry-registry-demo1-ailab-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/configuration-snippet":"add_header Cache-Control \"no-cache, no-store, must-revalidate\";\nadd_header Pragma \"no-cache\";\nadd_header X-Frame-Options \"SAMEORIGIN\";\nadd_header X-Content-Type-Options \"nosniff\";\n","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"signalement-ing [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/configuration-snippet: |
        add_header Cache-Control "no-cache, no-store, must-revalidate";
        add_header Pragma "no-cache";
        add_header X-Frame-Options "SAMEORIGIN";
        add_header X-Content-Type-Options "nosniff";
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-07-08T21:24:52Z"
    generation: 3
    name: signalement-ingress
    namespace: demo1
    resourceVersion: "22563283"
    uid: 3837da3a-3391-4890-abb5-256eb63ba2f0
  spec:
    ingressClassName: public
    rules:
    - host: signalement.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: signalement-citoyen-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - signalement.ailab.infocepo.com
      secretName: signalement-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"name":"superset-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"superset.demo1.local.lan","http":{"paths":[{"backend":{"service":{"name":"superset-svc","port":{"number":8088}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["superset.demo1.local.lan"],"secretName":"superset-tls"}]}}
    creationTimestamp: "2026-09-03T15:31:55Z"
    generation: 1
    name: superset-ingress
    namespace: demo1
    resourceVersion: "32761727"
    uid: 59e4b49b-0117-44ff-b9f0-1752f36778fa
  spec:
    ingressClassName: public
    rules:
    - host: superset.demo1.local.lan
      http:
        paths:
        - backend:
            service:
              name: superset-svc
              port:
                number: 8088
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - superset.demo1.local.lan
      secretName: superset-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"test-infocepo-com-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"test.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"test-infocepo-com-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"h [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-04T23:50:01Z"
    generation: 1
    name: test-infocepo-com-ingress
    namespace: demo1
    resourceVersion: "33007614"
    uid: 54d7048c-be52-4a0d-bbcc-5e5f5960eaba
  spec:
    ingressClassName: public
    rules:
    - host: test.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: test-infocepo-com-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - test.infocepo.com
      secretName: test-infocepo-com-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"tika-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"tika.demo1.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"tika-service","port":{"number":9998}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["tika.demo1.ailab.infocepo.com"],"secret [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-04T13:31:53Z"
    generation: 1
    name: tika-ingress
    namespace: demo1
    resourceVersion: "27252042"
    uid: d81dd587-1891-42c4-ae08-82ef63e9685d
  spec:
    ingressClassName: public
    rules:
    - host: tika.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: tika-service
              port:
                number: 9998
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - tika.demo1.ailab.infocepo.com
      secretName: tika-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"location = /model-eff/ { rewrite ^ /model-eff.html break; }","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.ingress.kubernetes.io/use-regex":"false"},"creationTimestamp":"2026-08-14T12:56:36Z","generation":2,"name":"trends-dashboard-ingress","namespace":"demo1","resourceVersion":"29091710","uid" [...]
      nginx.ingress.kubernetes.io/configuration-snippet: location = /model-eff/ {
        rewrite ^ /model-eff.html break; }
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/use-regex: "false"
    creationTimestamp: "2026-08-14T12:56:36Z"
    generation: 2
    name: trends-dashboard-ingress
    namespace: demo1
    resourceVersion: "29092001"
    uid: 47a1e068-7b31-4661-ba91-8ed998940ff1
  spec:
    rules:
    - host: trends.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: trends-dashboard-svc
              port:
                number: 80
          path: /model-eff
          pathType: Prefix
        - backend:
            service:
              name: trends-dashboard-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - trends.ailab.infocepo.com
      secretName: trends-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"tricoteuses-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"exploratrice.demo1.ailab.infocepo.com"," [...]
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-09-07T11:30:46Z"
    generation: 1
    name: tricoteuses-ingress
    namespace: demo1
    resourceVersion: "33458650"
    uid: 4807799e-c4c8-42aa-9e67-619efd4d075a
  spec:
    ingressClassName: public
    rules:
    - host: exploratrice.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: tricoteuses-exploratrice
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: moulineuse.demo1.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: tricoteuses-moulineuse
              port:
                number: 8000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - exploratrice.demo1.ailab.infocepo.com
      - moulineuse.demo1.ailab.infocepo.com
      secretName: tricoteuses-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"unifie-site-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"finitude.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"finitude","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["fi [...]
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-07-08T21:24:52Z"
    generation: 4
    name: unifie-site-ingress
    namespace: demo1
    resourceVersion: "22563301"
    uid: 5008a6bd-0b4f-4224-b7d5-34c7ddc5801e
  spec:
    ingressClassName: public
    rules:
    - host: finitude.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: finitude
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - finitude.ailab.infocepo.com
      secretName: finitude-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"veille-dashboard-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"veille.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"veille-dashboard","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["veille.ailab.infocepo.com"]," [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-23T23:25:33Z"
    generation: 1
    name: veille-dashboard-ingress
    namespace: demo1
    resourceVersion: "30789100"
    uid: 0eba8374-fe8d-4d06-91de-1f8d8c9a4c91
  spec:
    ingressClassName: public
    rules:
    - host: veille.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: veille-dashboard
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - veille.ailab.infocepo.com
      secretName: veille-dashboard-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"public"},"name":"wiki-onboarding-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"onboarding.demo1.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"onboarding","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"onboarding.demo1.ailab.infocepo.com","http":{"paths": [...]
      kubernetes.io/ingress.class: public
    creationTimestamp: "2026-07-09T00:10:42Z"
    generation: 5
    name: wiki-onboarding-ingress
    namespace: demo1
    resourceVersion: "23210894"
    uid: da44b58e-6b9b-4eac-94ec-79d629a9d0a4
  spec:
    ingressClassName: public
    rules:
    - host: onboarding.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: wiki-onboarding
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - onboarding.ailab.infocepo.com
      secretName: onboarding-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"zedsd-ingress","namespace":"demo1"},"spec":{"ingressClassName":"public","rules":[{"host":"zedsd.ailab.infocepo.com","http":{"paths":[{"backend":{"service":{"name":"zedsd-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["zedsd.ailab.infocepo.com"],"secretName":"zedsd-t [...]
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-08-25T12:33:30Z"
    generation: 1
    name: zedsd-ingress
    namespace: demo1
    resourceVersion: "31080720"
    uid: 5af58d9d-5870-42b1-b32a-295874ae5e70
  spec:
    ingressClassName: public
    rules:
    - host: zedsd.ailab.infocepo.com
      http:
        paths:
        - backend:
            service:
              name: zedsd-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - zedsd.ailab.infocepo.com
      secretName: zedsd-tls
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.128
kind: List
metadata:
  resourceVersion: ""
